<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="create_new_login">Create</string>
    <string name="login_help">Tap \"CREATE\" to register a new email address and password.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="continue_from_last">Tap Continue to resume your inventory.</string>
    <string name="continue_to">Continue</string>
    <string name="login_help_instructions">If you have logged in previously, you may do so again by entering your email and address from the previous session.</string>
    <string name="create_help_instructions">If you have never logged in before, enter your email address and a password to create a new set of login credentials.</string>
    <string name="take_me_to_my_shoes">Take me to my shoes!</string>
    <string name="log_out">Log Out</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="_" />
    <string name="comp">Company:</string>
    <string name="welcome_text">Welcome back to your Shoe Closet - the app that helps you keep track of your shoes!</string>
    <string name="tap_the_button">Tap the button below to go to your shoes.</string>
    <string name="detailFragmentLabel">Shoe Details</string>
    <string name="list_fragment_label">Shoe List</string>
    <string name="instructionFragmentLabel">Instructions</string>
    <string name="welcomeFragmentLabel">Welcome</string>
    <string name="loginFragmentLabel">Log In</string>
    <string name="empty_string">\"\"</string>
</resources>
