<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeFragment">

        <TextView
            android:id="@+id/welcomBackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back" />

        <TextView
            android:id="@+id/welcomeTextViewDirective"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_from_last" />

        <Button
            android:id="@+id/instructionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_to" />

    </LinearLayout>
</layout>