<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/layout_style"
        android:outlineProvider="none"
        tools:context=".LoginFragment">

        <!-- Will all of the layouts, I decided to use Linear Layouts
             to layout the views because they are simpler to use and I
             wanted to stack the views (for the most part) on top of
             one another. I realize that I might have used a ConstraintLayout
             for some of the views to accommodate screens of different sizes,
             types and for times when a device is rotated but the goal of
             this project was to support views on a Pixel 3. -->
        <TextView
            android:id="@+id/emailLabel"
            style="@style/TextViewStyle"
            android:text="@string/email" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            style="@style/EditTextStyle"
            android:hint="user@youremail.com" />

        <TextView
            android:id="@+id/passwordLabel"
            style="@style/TextViewStyle"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margins"
            android:layout_marginEnd="@dimen/side_margins"
            android:layout_marginBottom="@dimen/inside_margin"
            android:backgroundTint="@color/text_tint"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:singleLine="false"
            android:textColorHint="@color/hint_color" />

        <LinearLayout style="@style/horizontal_layout_style">

            <Button
                android:id="@+id/loginButton"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/createButton"
                style="@style/ButtonStyle"
                android:layout_weight="1"
                android:text="@string/create_new_login" />

        </LinearLayout>

    </LinearLayout>
</layout>